# fastvec

./: .gitignore  LICENSE  README.md  Setup.hs  c2llvmIR.txt  fastvec.cabal  stack.yaml
codegen/: Llvm.hs  codegen.hs  platformtest.cmm
codegen/Data/Geometry/: Gen.hs
codegen/Llvm/: BaseClass.hs  Expression.hs  Function.hs  Numbers.hs  ProgramMonad.hs
codegen/Llvm/Arch/: CodeAMD64.hs
prims/: FloatX3Ops.c  FloatX3Ops.ll  FloatX4Ops.c  FloatX4Ops.ll  Int32X4Ops.c  Int32X4Ops.ll  JSMatrix.js  JSNumberOps.js  JSQuaternion.js
src/: Main.hs
src/Data/: Geometry.hs
src/Data/Geometry/: Approximate.hs  Quaternion.hs  Transform.hs  Types.hs  VectorMath.hs
src/Data/Geometry/Instances/: Enum.hs  Eq.hs  Floating3.hs  Floating4.hs  FloatingJS.hs  Fractional.hs  Integral.hs  Num.hs  Ord.hs  Real.hs  RealFloat.hs  RealFrac.hs  Show.hs  Storable.hs  TypedArray.hs
src/Data/Geometry/Prim/: FloatX3.hs  FloatX4.hs  Int32X4.hs  JSNum.hs
src/Data/Geometry/Transform/: Matrix4.hs  Quaternion.hs  SpaceTransform.hs
src/Data/Geometry/Types/: FloatX4.hs
test/: VectorTests.hs
test/VectorTests/: TH.hs  TestNum.hs  VectorGenerators.hs
