name: fastvec
version: 0.1.1
cabal-version: >=1.22
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2015 Artem M. Chirkin <chirkin@arch.ethz.ch>
maintainer: Artem M. Chirkin <chirkin@arch.ethz.ch>
stability: Experimental
homepage: http://www.ia.arch.ethz.ch/chirkin/
synopsis: Fast 2D-4D geometry utilizing SIMD
description:
    This library is an attempt to make fast 2D-4D geometry library that highly relies on SIMD extentions.
    The intention is to use the library in OpenGL programs.
    At this stage only x86_64 architecture is supported.
    All operations on vectors are imported from raw LLVM IR via "foreign import prim" mechanics.
    Currently a lot of avx instructions are used, so it will only run on modern machines.
    Vectors implement standard classes like Num, Fractional etc - all these operations are scalar;
    for vector operations like dot products or matrix products I use separate classes.
category: Math, Geometry
author: Artem M. Chirkin <chirkin@arch.ethz.ch>

source-repository head
    type: git
    location: git://github.com/achirkin/fastvec.git

library

    if impl(ghcjs -any)
        build-depends:
            base >=4.8.0.0 && <5,
            ghcjs-hs-interop -any
        cpp-options: -DUSE_JAVASCRIPTFFI
        other-modules:
            Data.Geometry.Types
            Data.Geometry.Instances.Eq
            Data.Geometry.Instances.FloatingJS
            Data.Geometry.Instances.Fractional
            Data.Geometry.Instances.Num
            Data.Geometry.Instances.Ord
            Data.Geometry.Instances.Show
            Data.Geometry.Instances.Storable
            Data.Geometry.Instances.TypedArray
            Data.Geometry.Instances.Enum
            Data.Geometry.Instances.Integral
            Data.Geometry.Instances.Real
            Data.Geometry.Instances.RealFrac
            Data.Geometry.Instances.RealFloat
            Data.Geometry.Transform.Matrix4
            Data.Geometry.Transform.Quaternion
            Data.Geometry.Transform.SpaceTransform
            Data.Geometry.Quaternion
            Data.Geometry.Prim.JSNum
        ghc-options: -Wall -O2 -fenable-rewrite-rules

    if !impl(ghcjs -any)
        build-depends:
            base >=4.8.0.0 && <5,
            ghc-prim >=0.4 && <0.5
        other-modules:
            Data.Geometry.Types
            Data.Geometry.Instances.Eq
            Data.Geometry.Instances.Floating3
            Data.Geometry.Instances.Floating4
            Data.Geometry.Instances.Fractional
            Data.Geometry.Instances.Num
            Data.Geometry.Instances.Ord
            Data.Geometry.Instances.Show
            Data.Geometry.Instances.Storable
            Data.Geometry.Prim.FloatX3
            Data.Geometry.Prim.FloatX4
            Data.Geometry.Prim.Int32X4
        ghc-options: -Wall -fllvm -O2 -mavx2 -fenable-rewrite-rules
    exposed-modules:
        Data.Geometry
        Data.Geometry.Approximate
        Data.Geometry.VectorMath
        Data.Geometry.Transform
    js-sources:
        prims/JSNumberOps.js
        prims/JSMatrix.js
        prims/JSQuaternion.js
    default-language: Haskell2010
    hs-source-dirs: src

executable TempTests

    if impl(ghcjs -any)
        build-depends:
            base >=4.8.0.0 && <5,
            ghcjs-hs-interop -any
        cpp-options: -DUSE_JAVASCRIPTFFI
        other-modules:
            Data.Geometry
            Data.Geometry.VectorMath
            Data.Geometry.Types
            Data.Geometry.Instances.Eq
            Data.Geometry.Instances.FloatingJS
            Data.Geometry.Instances.Fractional
            Data.Geometry.Instances.Num
            Data.Geometry.Instances.Ord
            Data.Geometry.Instances.Show
            Data.Geometry.Instances.Storable
            Data.Geometry.Instances.TypedArray
            Data.Geometry.Instances.Enum
            Data.Geometry.Instances.Integral
            Data.Geometry.Instances.Real
            Data.Geometry.Instances.RealFrac
            Data.Geometry.Instances.RealFloat
            Data.Geometry.Transform.Matrix4
            Data.Geometry.Transform.Quaternion
            Data.Geometry.Transform.SpaceTransform
            Data.Geometry.Quaternion
            Data.Geometry.Prim.JSNum
        ghc-options: -Wall -O2 -fenable-rewrite-rules

    if !impl(ghcjs -any)
        build-depends:
            base >=4.8.0.0 && <5,
            ghc-prim >=0.4 && <0.5
        other-modules:
            Data.Geometry
            Data.Geometry.VectorMath
            Data.Geometry.Types
            Data.Geometry.Instances.Eq
            Data.Geometry.Instances.Floating3
            Data.Geometry.Instances.Floating4
            Data.Geometry.Instances.Fractional
            Data.Geometry.Instances.Num
            Data.Geometry.Instances.Ord
            Data.Geometry.Instances.Show
            Data.Geometry.Instances.Storable
            Data.Geometry.Prim.FloatX3
            Data.Geometry.Prim.FloatX4
            Data.Geometry.Prim.Int32X4
        ghc-options: -Wall -fllvm -O2 -mavx2 -fenable-rewrite-rules
    main-is: Main.hs
    js-sources:
        prims/JSNumberOps.js
        prims/JSMatrix.js
        prims/JSQuaternion.js
    default-language: Haskell2010
    hs-source-dirs: src

test-suite VectorTests

    if !impl(ghcjs -any)
        build-depends:
            HTF -any,
            fastvec -any,
            template-haskell >=2.10.0.0 && <2.11
        other-modules:
            VectorTests.VectorGenerators
            VectorTests.TH
            VectorTests.TestNum
        ghc-options: -Wall -fllvm -O2 -fenable-rewrite-rules
    type: exitcode-stdio-1.0
    main-is: VectorTests.hs
    build-depends:
        base >=4 && <5
    default-language: Haskell2010
    hs-source-dirs: test
